 - Avoid argument lookup ambiguity in swap when used in combination with stl. Using same trick as boost now and use 2 different template parameters in it.

 - Fixed bug causing memory access violation in string::replace found and patched by Nalin.

 - WM_SYSCOMMAND - SC_KEYMENU message is now ignored (F10 and ALT in Win32 windowed mode)

-----------------------------
Changes in 1.7.3 (??.??.2011)

 - CGUIScrollBar passes unused mousemove-events now to parent element. Fixes focus-bug in ComboBox reported by REDDemon here: http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?t=43474&highlight=

 - Fix clipping in CGUITabControl

 - Fix clipping in CGUITable, reported by ceyron

 - Skip bone weights and additional information in ms3d file if no joint was defined before.

 - Fix mem leak in CImage, found by mloren.

 - Fix tga writing, reported by xirtamatrix

 - Tab-positions care now about the borders correctly

 - TabControl now respositions it's tabs when setTabVerticalAlignment is changed (thx @ ceyron for reporting+testcase)

 - CGUIModalScreen now no longer takes focus itself, but tries to give it first child when possible to fix modal windows losing focus all the time

 - Modal screens no longer blinks when gui-elements call removeFocus on themself (thx @ yaten for reporting+testcase)

 - Fix crash in multiline-editbox when selecting with mouse (thx @ ceyron for reporting and testcase)

 - Fix render context creation for OpenGL under Windows.

 - Fix the reset problem of d3d9 driver in combination with hardware buffers.

 - Fix .x loader in case of unused vertices.

 - Avoid empty line in texts with very large words. Text wrapping would introduce an empty line in earlier versions.

 - Add a new attribute which assigns hw mapping hint to the whole Mesh.

 - Allow creation of water scene node without mesh.

 - Fix regeneration of skydome.

 - Fix scene node type and factory support for volume light
